--- a/app/index.html
+++ b/app/index.html
@@ -34,10 +34,10 @@
             </button>
           </div>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
+          <div class="collapse navbar-collapse navigation" id="js-navbar-collapse">
 
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#philosophy">Our Philosophy</a></li>
+            <ul class="nav navbar-nav child">
+              <li><a href="#philosophy">Our Philosophy</a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#why">Why Hire Us?</a></li>
               <li><a href="#team">Meet Our Team</a></li>
@@ -49,7 +49,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container" ng-view="">
 
     </div>
 
