--- a/app/index.html
+++ b/app/index.html
@@ -36,12 +36,17 @@
 
           <div class="collapse navbar-collapse navigation" id="js-navbar-collapse">
 
-            <ul class="nav navbar-nav child">
+            <ul class="nav navbar-nav">
               <li><a href="#philosophy">Our Philosophy</a></li>
+              <li class="navigation-separator"></li>
               <li><a href="#services">Services</a></li>
+              <li class="navigation-separator"></li>
               <li><a href="#why">Why Hire Us?</a></li>
+              <li class="navigation-separator"></li>
               <li><a href="#team">Meet Our Team</a></li>
+              <li class="navigation-separator"></li>
               <li><a href="#testimonials">Testimonials</a></li>
+              <li class="navigation-separator"></li>
               <li><a href="#contactus">Contact Us</a></li>
             </ul>
           </div>
