--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header">
+    <div class="header" sticky>
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
           <div class="navbar-header">
@@ -34,7 +34,7 @@
             </button>
           </div>
 
-          <div class="collapse navbar-collapse navigation" id="js-navbar-collapse">
+          <div class="collapse navbar-collapse navigation" id="js-navbar-collapse" >
 
             <ul class="nav navbar-nav">
               <li><a href="#philosophy">Our Philosophy</a></li>
@@ -81,6 +81,8 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/matchmedia/matchMedia.js"></script>
+    <script src="bower_components/ngSticky/lib/sticky.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
