--- a/app/index.html
+++ b/app/index.html
@@ -21,40 +21,9 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header" sticky>
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
+    
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-
-          <div class="collapse navbar-collapse navigation" id="js-navbar-collapse" >
-
-            <ul class="nav navbar-nav">
-              <li><a href="#philosophy">Our Philosophy</a></li>
-              <li class="navigation-separator"></li>
-              <li><a href="#services">Services</a></li>
-              <li class="navigation-separator"></li>
-              <li><a href="#why">Why Hire Us?</a></li>
-              <li class="navigation-separator"></li>
-              <li><a href="#team">Meet Our Team</a></li>
-              <li class="navigation-separator"></li>
-              <li><a href="#testimonials">Testimonials</a></li>
-              <li class="navigation-separator"></li>
-              <li><a href="#contactus">Contact Us</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container" ng-view="">
+    <div ng-view="">
 
     </div>
 
